# RNS-multiply-comparison

./: CMakeLists.txt  Justfile  LICENSE  README.md
benchmarks/: matrix_heap_cpu.cpp  matrix_stack_cpu.cpp  matrix_stack_cuda.cpp  matrix_stack_cuda_rns.cpp
misc/: moduli.py
src/: main.cpp  matrix_heap.hpp  matrix_stack.hpp  multiply_int32.cu  multiply_int32.hpp
tests/: matrix_heap_cpu.cpp  matrix_stack_cpu.cpp  matrix_stack_cuda.cpp  matrix_stack_cuda_rns.cpp
